Run embedded Neo4j 5 out-of-process over Bolt to isolate antlr (003)
Neo4j 5.26's Cypher engine requires antlr4-runtime 4.13.x, whose ATN
serialization is incompatible (both ways) with the antlr 4.9.2 that libfqlite
(SQLite undelete) pins. They cannot coexist on one flat classpath, so the
embedded engine is moved to a child JVM and the main process talks to it over
the Neo4j Bolt driver (the same out-of-process idiom IPED already uses for
Sleuthkit/parsing). This also sets up a clean service boundary for a future
OSGi migration.

New module iped-graph-server (full Neo4j 5 without libfqlite -> antlr 4.13.x):
- GraphServer: embedded engine + Bolt connector on a free port (stdio protocol).
- GraphPostImport: post-generation Cypher + contact grouping (moved out of
  GraphGenerator), run embedded inside the isolated child.
- Assembled as a zip, unpacked into the release lib/neo4j/.

iped-engine:
- GraphServiceImpl rewritten as a Bolt driver client: start() spawns GraphServer
  (via Neo4jChildLauncher, which locates lib/neo4j/ and builds the child command),
  reads its Bolt port and opens a Driver; queries run in Bolt sessions.
- BoltEntity/BoltNode/BoltRelationship/BoltPath implement the org.neo4j.graphdb
  interfaces over driver records, so the 11 graph UI files stay unchanged.
- Cypher 5 fixes: size((n)--()) -> COUNT { (n)--() }; rel-type :A|:B -> :A|B;
  relationship queries return startNode(r)/endNode(r) for getStartNode/getEndNode.
- GraphService drops getGraphDb(), adds searchPaths(); SearchLinksQuery SPI uses
  GraphService instead of GraphDatabaseService.
- GraphImportRunner uses the Neo4j 5 CLI (database import full) on lib/neo4j/.
- pom: full neo4j -> neo4j-graphdb-api + neo4j-java-driver.

iped-app:
- pom: unpack iped-graph-server zip into lib/neo4j/, excludeTypes=zip on
  copy-dependencies, and wildcard-exclude the zip dep's transitives so the
  embedded engine + antlr 4.13 do not leak into the flat lib/.
- SearchLinksWorker passes GraphService.
- CacheTimePe